Update user profile information in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,10 +77,10 @@
 
             <div class="sidebar-footer">
                 <div class="user-profile">
-                    <div class="avatar">JD</div>
+                    <div class="avatar">sai</div>
                     <div class="user-info">
-                        <span class="name">John Doe</span>
-                        <span class="role">Product Designer</span>
+                        <span class="name">caduvukoo</span>
+                        <span class="role">ledante pothaav</span>
                     </div>
                 </div>
             </div>
